前段我们锁应该知道的更新

--- a/source/_posts/前端我们所应该知道的.md
+++ b/source/_posts/前端我们所应该知道的.md
@@ -8,3 +8,56 @@ categories: 前端
 ```css
 white-space:normal;
 ```
+### 2.常见的一些东西都是什么意思
+##### (1)`margin:0;padding:0;`
+``` css
+body{
+    margin:0;
+    padding:0;
+}
+ul
+{
+    list-style-type:none;/*去除li前默认的小圆点*/
+    margin:0;
+    padding:0;
+    overflow:hidden;/*防止li出现再ul外*/
+}
+/*避免在不同的浏览器中出现差异*/
+```
+##### (2)`doctype`
+``` html
+<!doctype html>
+<!-- 在IE8以及更早的版本中,使用一些属性会有不同的偏差,比如:float,ie8会在右侧增加17px
+的外边距.所以设置doctype声明 -->
+```
+##### (3)`<p class="sty1 sty2">你好</p>`
+在html中声明的`class="sty1 sty2"`的对应的css样式为:
+``` css
+.sty1{
+    font-weight:bold;
+}
+.sty2{
+    font-style:italic;
+}
+.sty1.sty2{/*中间没有空格*/
+    background:#FF00FF;
+}
+```
+结果如下:
+
+![多类选择器结果](http://7xphbb.com1.z0.glb.clouddn.com/css-float-1.png)
+
+总结:
+
+- `class="sty1 sty2"`只会适应`.sty1{}`,`.sty2{}`,`.sty1.sty2{}`! 但不会适应`.sty1.sty2.sty3{}`;
+- `class="sty1 sty2 sty3"`会适应`.sty1{}`,`.sty2{}`,`sty3{}`,`.sty1.sty2{}`,`.sty1.sty3{}`,`.sty2.sty3{}`,`.sty1.sty2.sty3{}`;
+
+**当有属性重叠时,根据权重来适应**.
+
+### 3.乱码问题:
+我们知道,乱码问题都是因为编码问题引起的,但是哪块有问题,我其实一直都不清楚,现总结如下:
+
+- 编辑器的编码:我用的`sublime3`,下了`ConvertToUTF8`这个插件,可以让**内容**使用`utf-8`编码,当然,默认就是`utf-8`;
+- 网页的源代码编码:html文件在头部声明了如下代码:`<meta charset="utf-8">`,浏览器的核心其实是渲染器与js解析器,那么,渲染器会根据网页源文件里面设定的编码渲染网页;
+
+**只要这两个地方统一了,一般浏览器上就不会再出现乱码.如果还有,看看是不是浏览器设定的编码格式不统一.**
