--- a/source/_posts/前端我们所应该知道的.md
+++ b/source/_posts/前端我们所应该知道的.md
@@ -30,8 +30,8 @@ ul
 <!-- 在IE8以及更早的版本中,使用一些属性会有不同的偏差,比如:float,ie8会在右侧增加17px
 的外边距.所以设置doctype声明 -->
 ```
-##### (3)`<p class="sty1 sty2">你好</p>`
-在html中声明的`class="sty1 sty2"`的对应的css样式为:
+##### (3)多类选择器:`class="sty1 sty2"`
+    在html中声明的`<p class="sty1 sty2">你好</p>`的对应的css样式为:
 ``` css
 .sty1{
     font-weight:bold;
