前端知识更新

--- a/source/_posts/前端我们所应该知道的.md
+++ b/source/_posts/前端我们所应该知道的.md
@@ -61,3 +61,14 @@ ul
 - 网页的源代码编码:html文件在头部声明了如下代码:`<meta charset="utf-8">`,浏览器的核心其实是渲染器与js解析器,那么,渲染器会根据网页源文件里面设定的编码渲染网页;
 
 **只要这两个地方统一了,一般浏览器上就不会再出现乱码.如果还有,看看是不是浏览器设定的编码格式不统一.**
+
+### 4.网页底部栏：
+``` html
+<style type="text/css">
+    .footer{
+        position: fixed;
+        bottom: 10px;
+    }
+</style>
+<div class="footer">底部栏</div>
+```
