--- a/source/_posts/前端我们所应该知道的.md
+++ b/source/_posts/前端我们所应该知道的.md
@@ -5,7 +5,7 @@ categories: 前端
 ---
 ### 1.当文字过多需要自动换行时:
 设定死宽度,然后使用下面的样式:
-```css
+``` css
 white-space:normal;
 ```
 ### 2.常见的一些东西都是什么意思
@@ -62,7 +62,7 @@ ul
 
 **只要这两个地方统一了,一般浏览器上就不会再出现乱码.如果还有,看看是不是浏览器设定的编码格式不统一.**
 
-### 4.网页底部栏：
+### 4.网页底部栏:
 ``` html
 <style type="text/css">
     .footer{
@@ -71,4 +71,17 @@ ul
     }
 </style>
 <div class="footer">底部栏</div>
+```
+### 5.浏览器的滚动条:
+![百度首页更多产品bug](http://7xphbb.com1.z0.glb.clouddn.com/jike_baidu_product_bug.jpg)在批改极客学院作业的过程中，有个小bug印象特别深刻，让我想了一个周都没有想明白，表现为：
+当移动到右侧的更多产品时，会向下弹出来该下拉列表，而且会向左偏移一段距离。原因是为了沾满整个屏幕，给此div设置了`min-height=667`，而这个高度大于我的屏幕高度，所以导致右侧出来了一个滚动条，这个滚动条是占宽度的。所以会向左偏移。
+
+解决方案：设置滚动条的宽高为0，如下：
+``` html
+<style type="text/css">
+    ::-webkit-scrollbar {
+        width: 0;
+        height: 0;
+    }
+</style>
 ```
