谷歌云补充

--- a/source/_posts/谷歌云部署个人网站.md
+++ b/source/_posts/谷歌云部署个人网站.md
@@ -34,7 +34,7 @@ categories: linux
 *Tip:* 我的系统是`centOS7`，所以其他的系统会有稍微的区别，主要是包管理器的区别。如果是`debian`和`ubuntu`使用`apt-get`安装。
 
 ### 安装 Node.js
-我这儿使用源码安装包安装，你也可以选择其他方式，目前的最新稳定版是`8.9.4`，以下安装`node`的版本是`8.9.4`
+**方法1： **使用源码安装包安装，你也可以选择其他方式，目前的最新稳定版是`8.9.4`，以下安装`node`的版本是`8.9.4`
 ``` bash
 sudo yum install wget
 # 在官方网站（https://nodejs.org/zh-cn/download/）查看链接并下载源码
@@ -45,9 +45,17 @@ cd node-v8.9.4
 # 安装编译环境并编译
 sudo yum install gcc gcc-c++
 ./configure
-make
+make # 这一步时间比较长
 # 安装node
 sudo make install
+# 检测安装是否成功，出现版本号就成功了
+node --version
+```
+**方法2：**官方编译过的二进制数据包安装，更快速和方便
+在[下载地址](https://nodejs.org/download/release/)选择要下载的版本，还是选择`8.9.4`
+``` bash
+wget https://nodejs.org/download/release/v8.9.4/node-v8.9.4-linux-x64.tar.gz
+sudo tar --strip-components 1 -xzvf node-v8.9.4-linux-x64.tar.gz -C /usr/local
 # 检测安装是否成功，出现版本号就成功了
 node --version
 ```
@@ -123,3 +131,7 @@ ping cloud-tv.top
 更多域名解析的相关知识请自行百度。
 
 **最后**：访问 http://cloud-tv.top 或 http://www.cloud-tv.top 就可以看到之前部署的项目了。
+
+## 补充
+![google-cost](http://7xphbb.com1.z0.glb.clouddn.com/google-cloud-cost.png)
+刚心血来潮查看了一下谷歌云的花费，然后算一笔账。第一行是我开的一个微型主机（可供选择里面最小的），用来翻墙，算下来一年的费用是**$78.87**。第二行就是我开的一个比上面一个高一级的主机（也就是可选择主机里排倒数第二），用来部署个人网站，算下来一年的费用是**$481.65**。而且这只是主机运行的费用，不包含流量费。so...谷歌云送的**$300**不够啊...看来我得把两个主机合成一个，用最小型号的那个主机。果然...没钱是多么苦...
