补充360面试题

--- a/source/_posts/面试遇到的.md
+++ b/source/_posts/面试遇到的.md
@@ -21,6 +21,7 @@ categories: 前端
 下面这张图可以清晰明白的帮助我们理解，如果还想深入理解，参考 [这儿](https://github.com/mqyqingfeng/Blog/issues/2)
 ![原型链](http://7xphbb.com1.z0.glb.clouddn.com/prototype-series.png)
 
+<!-- more -->
 #### apply 与 call 的区别
 都是为了改变调用函数的上下文，唯一的区别就是传参格式的区别，`call` 接受多个参数， `apply` 接受数组参数，如下：
 ``` js
@@ -38,8 +39,8 @@ fun().apply(thisObj, [arg1, arg2 ...])
 可以参考我的这篇 [文章](http://jintang.github.io/2016/10/08/H5%E4%B8%ADlocalStorage%E4%B8%8EsessionStorage%E7%9A%84%E5%8C%BA%E5%88%AB/)
 
 #### 登陆超时如何处理
-客户端 `cookie` 存 `sessionId`，`ajax` 请求携带 `cookie`，后端判断对应 `sessionId` 对应的客户，如果超时了就给接口返回超时的标志位，前端根据该标志跳转到登录页并清空 `cookie`。  
-我们的项目中好像还用了 `token` ...
+客户端 `cookie` 存 `sessionId`，`ajax` 请求携带 `cookie`，后端判断对应 `sessionId` 对应的客户，后端存的 `session` 如果超时了就给接口返回超时的标志位，前端根据该标志跳转到登录页并清空 `cookie`。
+其他的方法还有使用 `token` ,具体可以参照 [这儿](http://www.cnblogs.com/xiekeli/p/5607107.html)
 
 #### 如何适配不同大小的显示屏
 我回答了 响应式布局、 rem 、 flex，自己对这个并不深入
@@ -68,8 +69,21 @@ fun().apply(thisObj, [arg1, arg2 ...])
 #### 浏览器渲染html的详细过程
 回头翻答案，发现自己也了解过这个...但是被问到的时候，一点印象都没，只记得是先渲染 `dom` 树 ，再渲染具体的。具体的渲染过程请参照 [这儿](https://juejin.im/entry/59e1d31f51882578c3411c77)
 
-#### 数组排序算法
-可能是我记性太差，我总感觉不常用的东西很容易忘。排序算法我也模拟实现了插值排序，其他算法也都看过好几遍，结果...写纸上，也没法验证，根据面试官的表情好像写错了。
+#### 数组相关
+**排序算法：** 可能是我记性太差，我总感觉不常用的东西很容易忘。排序算法我也模拟实现了插值排序，其他算法也都看过好几遍，结果...写纸上，也没法验证，根据面试官的表情好像写错了。
+**数组去重：** 人家要求说出两种，第一种可以用 `[...new Set(arr)]`， 第二种自己实现...唉，问我的时候我比较慌，说了个双层遍历的方法，下面提供一个单层遍历的：
+``` js
+function distinct(arr) {
+    var obj = {};
+    if (Array.isArray(arr) && arr.length > 0) {
+        for (let i = 0, len = arr.length; i < len; i += 1) {
+            obj[arr[i]] = true;
+        }
+        return Object.keys(obj);
+    }
+    return [];
+}
+```
 
 #### require导入和import导入有啥区别
 刚开始接触 `es6` 的时候还看过这个，时间久了又忘记了...
@@ -86,10 +100,17 @@ fun().apply(thisObj, [arg1, arg2 ...])
 一共7种，其中 **引用类型** 只有一种，就是 `Object`，`Array` 与 `Function` 都不算，具体请看 [这儿](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Guide/Grammar_and_types)
 
 #### 移动端点击事件 200ms 延迟处理
-我回答的是可以用 `tap` 代替 `click`，面试官又问为啥，我说 `angular` 还是 `ionic` 里有这么个方法，官方推荐使用这个...这明显不是面试官想要的答案
+我回答的是可以用 `tap` 代替 `click`，面试官又问为啥，我说 `angular` 还是 `ionic` 里有这么个方法，官方推荐使用这个...这明显不是面试官想要的答案  
+有个小同事给了这个 `css` 属性: `touch-action: manipulation;` 禁用双击可缩放功能可减少浏览器在用户点击屏幕时延迟生成点击事件的需要,具体可以查看 [这儿](https://developer.mozilla.org/zh-CN/docs/Web/CSS/touch-action)
 
 #### 移动端 1px 边框问题
 同样是看过的东西，又忘了... 可以参考 [这儿](https://segmentfault.com/a/1190000011466832)
+
+#### sql相关
+有面试官问了些简单的 `sql` ，因为我说我不熟，所以问的都很简单，而且我面的是前端岗...涉及太多请自行谷歌
+
+#### vuex原理
+很抱歉我没了解这个，源码也没看过...请自行谷歌
 
 ### 机试题和开放性题目
 我们常碰到的是笔试然后面试，偶尔也会碰到机试题，我这次就碰到了。还碰到了两家比较牛的公司，是让我先做开放性的题目，然后将东西发给人家，人家审核通过了再给你发面试邀请。
@@ -113,4 +134,4 @@ fun().apply(thisObj, [arg1, arg2 ...])
 这个我也比较迷茫，我觉得前端有些浅，希望能接触到其他的技术。再就是走一步看一步了
 
 ### 结语
-还有很多问题都忘记了，想到了会再加上去。想要抱怨的是一些大公司审核太慢了...等你们的时间我已经找到了。上面的题有些是不是很难，哈哈，其中难得题目大多数都是由3个人问出来的： 一个架构师、 一个大公司的大佬、一家使用 `jquery`的技术leader（他们还没有拥抱es6，所以对es5里的一些比较麻烦的问题问的比较多），一般的问题都是比较简单的。和行业内的大佬交流挺有意思的，大多数面试官都感觉人很好。
+还有很多问题都忘记了，想到了会再加上去。想要抱怨的是一些大公司审核太慢了...等你们的时间我已经找到了。上面的题有些是不是很难，哈哈，其中难得题目大多数都是由3个人问出来的： 一个架构师、 一个大公司的大佬、一家使用 `jquery`的技术leader（他们还没有拥抱 `es6` ，所以对 `es5` 里的一些比较麻烦的问题问的比较多），一般的问题都是比较简单的。和行业内的大佬交流挺有意思的，大多数面试官都感觉人很好。
