浏览器常用的存储方式

--- a/source/_posts/面试遇到的.md
+++ b/source/_posts/面试遇到的.md
@@ -6,6 +6,8 @@ categories: 前端
 ---
 > 一有离意便按耐不住自己，面试了一周半便确定了自己即将去的地方，不知道是不是太快了点...前后林林总总面了10家过一点，有5家给了我offer，有些问题没回答上来但还是通过了，还有些就没通过，再次根据回忆主要记录下, 问的太多了，所以下面的问题都是印象比较深刻的，印象深刻嘛，要嘛是不会的，要嘛是问了次数比较多的。对了，我是一个前端，主要的问题也都是针对前端，因为一直在做 `vue` 项目，所以很多问题也都跟 `vue` 相关
 
+> 一位腾讯大佬有这样的面试技巧（或者说招聘技巧）：看候选人 `github` 有个技巧，看他 **activity** 里 **issue** 区讨论、给知名开源项目的 **PR、merged PR** 数量和质量
+
 ### 被问到两次以上的
 
 #### 前端优化方案
