--- a/source/_posts/洛阳纸贵.md
+++ b/source/_posts/洛阳纸贵.md
@@ -29,6 +29,12 @@ categories: 闲语
             $ sudo systemctl restart docke
             ```
         - `Windows10` 在系统右下角托盘 `Docker` 图标内右键菜单选择 `Settings` ，打开配置窗口后左侧导航菜单选择 `Daemon` 。在 `Registry mirrors` 一栏中填写加速器地址 `https://registry.docker-cn.com` ，之后点击 `Apply` 保存后 `Docker` 就会重启并应用配置的镜像地址了
+    - `react-native` :  
+        - 安装： `npm install -g react-native-cli`
+        - 初始化项目模板： `react-native init AwesomeProject`
+    - `vue` : 
+        - 安装：`npm install -g @vue/cli` ， `vue-cli` 到 3 了，加了可视化配置，更新的好快
+        - 初始化项目模板： `vue create 项目名`
 4. 常用 `IDE` 的设置存到云盘：我常用的 `vscode` 、 `webstorm` （jetbrain 家 IDE 的配置可以通用）
 <!-- more -->
 
