网页适配问题、移动端网页调试

--- a/source/_posts/洛阳纸贵.md
+++ b/source/_posts/洛阳纸贵.md
@@ -29,12 +29,20 @@ categories: 闲语
             $ sudo systemctl restart docke
             ```
         - `Windows10` 在系统右下角托盘 `Docker` 图标内右键菜单选择 `Settings` ，打开配置窗口后左侧导航菜单选择 `Daemon` 。在 `Registry mirrors` 一栏中填写加速器地址 `https://registry.docker-cn.com` ，之后点击 `Apply` 保存后 `Docker` 就会重启并应用配置的镜像地址了
-    - `react-native` :  
-        - 安装： `npm install -g react-native-cli`
-        - 初始化项目模板： `react-native init AwesomeProject`
     - `vue` : 
         - 安装：`npm install -g @vue/cli` ， `vue-cli` 到 3 了，加了可视化配置，更新的好快
         - 初始化项目模板： `vue create 项目名`
+    - `react-native` :  
+        - 安装： `npm install -g react-native-cli`
+        - 初始化项目模板： `react-native init AwesomeProject`
+    - `android`： 既然要用 `react-native`， 肯定要配置 `android` 与 `ios` 的环境，可惜我没 `mac`
+        - `jdk1.8`： `Android Studio` 必须。 需手动配置环境变量 `JAVA_HOME` 与 `Path`
+        - `Android Studio` 、 `SDK` 、 `ANDROID_HOME`: 可以帮助我们编译 `Android` 原生相关，用里面的 `SDK Manager`安装相关 `sdk`，配置环境变量 `ANDROID_HOME`
+        - 手机模拟器： `windows` 下如果你装了 `docker` 就不能用 `genymotion` 了，原因看后面。 选择 `Visual Studio Emulator for Android`
+    - 自动化工具： 这只是个工具，不应该将很多精力放在这上面
+        - `grunt`: 已经很少用了，需全局安装： `npm install -g grunt-cli`
+        - `gulp`: 有些还在用，也需全局安装： `npm install gulp-cli -g`
+        - `webpack`: 很流行。 可以全局安装，也可以只在项目中安装
 4. 常用 `IDE` 的设置存到云盘：我常用的 `vscode` 、 `webstorm` （jetbrain 家 IDE 的配置可以通用）
 <!-- more -->
 
