--- a/source/_posts/面试遇到的.md
+++ b/source/_posts/面试遇到的.md
@@ -99,7 +99,7 @@ function distinct(arr) {
 更多了解请查看阮大神的 [ECMAScript 6 入门](http://es6.ruanyifeng.com/#docs/module-loader#ES6-%E6%A8%A1%E5%9D%97%E4%B8%8E-CommonJS-%E6%A8%A1%E5%9D%97%E7%9A%84%E5%B7%AE%E5%BC%82)
 
 #### 请列举下js的数据类型
-一共7种，其中 **引用类型** 只有一种，就是 `Object`，`Array` 与 `Function` 都不算，具体请看 [这儿](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Guide/Grammar_and_types)
+一共7种，`es6`中新增加了一个数据类型 `Symbol`。其中 **引用类型** 只有一种，就是 `Object`，`Array` 与 `Function` 都不算，具体请看 [这儿](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Guide/Grammar_and_types)
 
 #### 移动端点击事件 200ms 延迟处理
 我回答的是可以用 `tap` 代替 `click`，面试官又问为啥，我说 `angular` 还是 `ionic` 里有这么个方法，官方推荐使用这个...这明显不是面试官想要的答案  
