--- a/source/_posts/移动端调试网页需知.md
+++ b/source/_posts/移动端调试网页需知.md
@@ -7,6 +7,7 @@ categories: 移动端
 > 注意是网页，而不是 App
 
 ## 常见国内移动端浏览器
+手机浏览器内核基本都是 `webkit`，只不过国内的重新封装了一层，所以谷歌浏览器自带的 `Inspect Device` 检测不出国内浏览器。
 
 1. 微信内置、qq浏览器： `X5内核` ，由腾讯开发的。
 
@@ -42,7 +43,10 @@ categories: 移动端
     /* 其他属性如margin、padding、line-height这些都可以用vw */
 }
 ```
-如果需要适配 `ipad` ，因为这个屏幕比手机大很多，所以最好用 `@media` 修改下页面布局。不用 `@media` 直接让等比缩放也勉强可以接受。
+以下情况需要酌情使用 `@media`:
+
+- 如果需要适配 `ipad` ，因为这个屏幕比手机大很多，所以最好用 `@media` 修改下页面布局。不用 `@media` 直接让等比缩放也勉强可以接受。
+- 用 `css` 写了特殊样式，比如说写一个 三个横杠的菜单图标，我们要为每个横杠设置高度，这个值一般比较小，直接上面的 `px2vw` 函数最后可能生成的是带小数的 `px`，在手机端你会发现三个横杠不一样高。这时候我们需要用 `@media` 设置整数的高度
 
 ## 1px border 问题
 利用伪类 和 `transform` 的 `scale`  
@@ -122,24 +126,64 @@ if (dpr > 1) {
 移动端浏览器没有 pc 浏览器最小字体 `12px` 的限制，可以直接指定小于  `12px` 的字体
 
 ## 图片问题
-1. 有些手机屏幕是高清屏，比如说 `iphone` 系列，现在它的主流 `dpr` 是 2 和 3 ，所以如果我们要用图片的话需要使用 2倍图 和 3倍图，不然高清屏下图片会模糊。当然用 `svg` 也是可以的。
-2. 设计mm截的图有些 `svg` 有些大。对于这些 `svg` ， 设计mm就帮我改成了 `jpg` 或 `png`， 图片变小了一些。但还有部分大小还是有些大，然后我用了 [压缩图片工具](https://tinypng.com/)，这个工具压缩后的图片不会修改图片的分辨率，所以不会影响图片的清晰度。它的原理是减少了原本图片里使用的颜色数量，肉眼是看不出来区别的。
+1. 图片模糊问题：  
+
+    有些手机屏幕是高清屏，比如说 `iphone` 系列，现在它的主流 `dpr` 是 2 和 3 ，所以如果我们要用图片的话需要使用 2倍图 和 3倍图，不然高清屏下图片会模糊。
+    
+    当然用 `svg` 也是可以的， `svg` 号称不会失真 , 但我在用 `iphoneX` 下有个小图标竟然有些模糊，原因不明...很纳闷
+2. 大图问题：
+
+     设计mm截的图有些 `svg` 有些大。对于这些 `svg` ， 设计mm就帮我改成了 `jpg` 或 `png`， 图片变小了一些，但还有部分大小还是有些大。
+     
+     然后我用了 [压缩图片工具](https://tinypng.com/)，这个工具压缩后的图片不会修改图片的分辨率，所以不会影响图片的清晰度。它的原理是减少了原本图片里使用的颜色数量，肉眼是看不出来区别的。
+3. `Svg` 大小问题：
+
+     `svg` 文件中不要设置固定px的 `width` 与 `height`（如果设置了， `svg` 就不会根据 `img` 标签设置的宽高变化了），可以设值为 100% 。用 `viewBox` 来描述 `svg` 的宽高比就行了。 
+     
+     然后在引用 `svg` 的 `img` 标签上设置宽高，或者只设置其中的一个。本来设计mm给我的 `svg` 有固定的宽高，我手动改成了 100% ，其他手机浏览器下可以自动缩放适应，但在 `IOS` 下这些改过的没有缩放，最后通过添加下面样式解决：
+    ``` css
+    // 父容器
+    .parent {display: flex;}
+    // svg
+    .icon {flex-shrink: 0;} 
+    ```
 
 
 ## 个别机型问题
-1. `IOS` 系统下滚动不流畅，添加下面的样式：
-``` css
-height: 100%;
-overflow: scroll;
--webkit-overflow-scrolling: touch;
-```
-2. `UC` 、 `QQ` 、 `360` 、 `Chrome` ... 浏览器:
-若你做首屏占满屏幕，底部的工具栏会盖住一部分内容，但如果滚动到最底部，工具栏却不会盖住内容，真不知道这里面怎么实现的。针对首屏被盖住内容的部分，按下面处理：
-``` js
-let browser = navigator.userAgent;
-if (browser.indexOf('MQQBrowser') !== -1 || browser.indexOf('UCBrowser') !== -1 || browser.indexOf('Chrome') !== -1) {
-    // 不知道工具栏具体的高度，所以是大概的给需要改变位置的元素加了 50px
-    let downSignEle = document.querySelector('.down-sign');
-    downSignEle.style.bottom = parseInt(getComputedStyle(downSignEle)['bottom']) + 50 + 'px';
-}
-```
+1. `UC` 、 `QQ` 、 `360` 、 `Chrome` ... 浏览器首屏工具栏问题：
+
+若需要做首屏占满屏幕：
+- 我用 `vh` 来实现占满屏幕，底部的工具栏会盖住一部分内容，但如果滚动到最底部，工具栏却不会盖住内容，应该是浏览器对 `vh` 的支持不太友好。针对首屏被盖住内容的部分，按下面处理：
+    ``` js
+    let browser = navigator.userAgent;
+    if (browser.indexOf('MQQBrowser') !== -1 || browser.indexOf('UCBrowser') !== -1 || browser.indexOf('Chrome') !== -1) {
+        // 不知道工具栏具体的高度，所以是大概的给需要改变位置的元素加了 50px
+        let downSignEle = document.querySelector('.down-sign');
+        downSignEle.style.bottom = parseInt(getComputedStyle(downSignEle)['bottom']) + 50 + 'px';
+    }
+    ```
+- 用 `js` 计算屏幕可见高度，建议这种方式，各种浏览器下都会统一
+    ``` js
+    let screenH = document.documentElement.clientHeight;
+    let firstPageEle = document.querySelector('.first-page');
+    firstPageEle.style.height = screenH + 'px';
+    ```
+
+2. `IOS` 系统下滚动不流畅，添加下面的样式：
+    ``` css
+    height: 100%;
+    overflow: scroll;
+    -webkit-overflow-scrolling: touch;
+    ```
+
+3. `IOS` 点击去除灰色选中效果，添加样式：
+    ``` css
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    ```
+
+4. `UC` 下 `text-align:center` 无效
+使用的 `UIkit` 的 `banner` 中 `text-align:center` 生效，但自己写的却不生效，对比样式发现没啥区别，没找到原因，最后用了下面的方案实现 `center` 效果，有哪位大佬知道请留言。
+    ``` css
+    display: flex;
+    justify-content: center;
+    ```
