react-native我们应该知道的

--- a/source/_posts/面试遇到的.md
+++ b/source/_posts/面试遇到的.md
@@ -98,6 +98,8 @@ function distinct(arr) {
 
 更多了解请查看阮大神的 [ECMAScript 6 入门](http://es6.ruanyifeng.com/#docs/module-loader#ES6-%E6%A8%A1%E5%9D%97%E4%B8%8E-CommonJS-%E6%A8%A1%E5%9D%97%E7%9A%84%E5%B7%AE%E5%BC%82)
 
+*注意：* 你可以在同一个文件中同时使用 `require` 和 `export`. 但不能同时使用 `import` 和 `module.exports`. 不然会报错——`Cannot assign to read only property 'exports' of object '#<Object>'`
+
 #### 请列举下js的数据类型
 一共7种，`es6`中新增加了一个数据类型 `Symbol`。其中 **引用类型** 只有一种，就是 `Object`，`Array` 与 `Function` 都不算，具体请看 [这儿](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Guide/Grammar_and_types)
 
