修改图床为腾讯cos

--- a/source/_posts/小棋童.md
+++ b/source/_posts/小棋童.md
@@ -4,7 +4,7 @@ tags:
 - music
 categories: music
 ---
-![小棋童](http://7xphbb.com1.z0.glb.clouddn.com/xiaoqitong.jpg)
+![小棋童](https://tang-blog-1257996120.cos-website.ap-chengdu.myqcloud.com/xiaoqitong.jpg)
 
 <!-- more -->
 
