--- a/source/_posts/洛阳纸贵.md
+++ b/source/_posts/洛阳纸贵.md
@@ -53,7 +53,7 @@ categories: 闲语
 
 2. 后端是 `php` ，关系不大。为毛我也要装 `php` 跟 `php` 框架 `laravel`，什么，前后端没分离...我擦。本地装完 `laravel` 后才发现大家都用的 `docker` 保持环境的一致，我记得之前学这个的时候记得 `windows` 下只有 `win10` 可以安装 `docker`，在建议下装 `ubuntu`
 
-3. 装双系统需要给 `linux` 系统压缩出一块硬盘，怕不够特意比网上的多分配了差不多一倍。 `ubuntu18.04` 装好了，我的台式机用的无线网卡，苦逼的发现连不上网，好不容易下了网卡驱动，又没有 `gcc` 的编译环境，无法 `make` ， 好蛋疼，最后找了根网线，醉了醉了。 装了一大堆的其他环境：`git` 、 `node` 、 `yarn` 、`php` ... `docker` 怎么也下不到最新版的，在 `docker` 官方仓库 [https://download.docker.com/linux/ubuntu](https://download.docker.com/linux/ubuntu) 里也找不到，怪不得安装不上最新的。然后我在 6.24 日（过了一个礼拜）的时候重新打开看了下，神奇的有了 ![docker-address](http://7xphbb.com1.z0.glb.clouddn.com/docker-address.png)。我很无语...
+3. 装双系统需要给 `linux` 系统压缩出一块硬盘，怕不够特意比网上的多分配了差不多一倍。 `ubuntu18.04` 装好了，我的台式机用的无线网卡，苦逼的发现连不上网，好不容易下了网卡驱动，又没有 `gcc` 的编译环境，无法 `make` ， 好蛋疼，最后找了根网线，醉了醉了。 装了一大堆的其他环境：`git` 、 `node` 、 `yarn` 、`php` ... `docker` 怎么也下不到最新版的，在 `docker` 官方仓库 [https://download.docker.com/linux/ubuntu](https://download.docker.com/linux/ubuntu) 里也找不到，怪不得安装不上最新的。然后我在 6.24 日（过了一个礼拜）的时候重新打开看了下，神奇的有了 ![docker-address](https://tang-blog-1257996120.cos-website.ap-chengdu.myqcloud.com/docker-address.png)。我很无语...
 
 4. 项目里的 `docker` ，我们的项目里配置了很多容器，需要搭配好，项目我不熟，最后是后台的同事帮助搞定了 `docker` 环境，自己一脸懵逼。
 
