--- a/source/_posts/谷歌云部署个人网站.md
+++ b/source/_posts/谷歌云部署个人网站.md
@@ -16,7 +16,7 @@ categories: linux
     - 启动磁盘——更改：选择 `CentOS7`，其他不用变。因为我要用到`mongodb`，如果选择`debian9`，`mongodb`的官网目前还不支持，为了在`debian9`上安装`mongodb`，我也是被折磨得很心累。然后果断在同事的建议下果断新建了个`CentOS7`的**实例**。当然你也可以选择其他的...
     - 管理、磁盘、网络、SSH密钥：需要改网络部分，如果你之前已经创建了**静态IP**，**外部IP**这一栏就选`临时`，如果没有创建的话，请选择`创建IP地址`。
 3. 点击创建，结果如下：
-    ![vm实例](http://7xphbb.com1.z0.glb.clouddn.com/google-cloud-vm.png)
+    ![vm实例](https://tang-blog-1257996120.cos-website.ap-chengdu.myqcloud.com/google-cloud-vm.png)
 
 <!-- more -->
 ## 创建部署的项目   
@@ -112,7 +112,7 @@ pm2 start index.js --name="myblog"
 购买域名可以去 [万网](https://wanwang.aliyun.com/)...因为我只是为了玩，所以在[景安网络](https://www.zzidc.com/main/huodong/doMainActivity/spreadid_138149_hdName_doMainActivity.html)买个1年便宜的`.top`域名。
 ### 域名解析
 进入**域名控制面板**——选择**DNS解析管理**——**添加记录：**
-![host](http://7xphbb.com1.z0.glb.clouddn.com/google-cloud-host.png)
+![host](https://tang-blog-1257996120.cos-website.ap-chengdu.myqcloud.com/google-cloud-host.png)
 我的域名是`cloud-tv.top`，为了让`www.cloud-tv.top`也可用，我添加的记录如上图所示，下面解释一下：
 >主机名这一列表示域名前缀，以`cloud-tv.top`为例，当值为： 
 - www：表示 `www.cloud-tv.top`
@@ -135,5 +135,5 @@ ping cloud-tv.top
 **最后**：访问 http://cloud-tv.top 或 http://www.cloud-tv.top 就可以看到之前部署的项目了。
 
 ## 补充
-![google-cost](http://7xphbb.com1.z0.glb.clouddn.com/google-cloud-cost.png)
+![google-cost](https://tang-blog-1257996120.cos-website.ap-chengdu.myqcloud.com/google-cloud-cost.png)
 刚心血来潮查看了一下谷歌云的花费，然后算一笔账。第一行是我开的一个微型主机（可供选择里面最小的），用来翻墙，算下来一年的费用是**$78.87**。第二行就是我开的一个比上面一个高一级的主机（也就是可选择主机里排倒数第二），用来部署个人网站，算下来一年的费用是**$481.65**。而且这只是主机运行的费用，不包含流量费。so...谷歌云送的**$300**不够啊...看来我得把两个主机合成一个，用最小型号的那个主机。果然...没钱是多么苦...
