--- a/source/_posts/面试遇到的.md
+++ b/source/_posts/面试遇到的.md
@@ -21,7 +21,7 @@ categories: 前端
 
 #### 原型链相关：如何实现原型链继承，原型与构造函数的关系，`new` 对象的时候发生的过程
 下面这张图可以清晰明白的帮助我们理解，如果还想深入理解，参考 [这儿](https://github.com/mqyqingfeng/Blog/issues/2)
-![原型链](http://7xphbb.com1.z0.glb.clouddn.com/prototype-series.png)
+![原型链](https://tang-blog-1257996120.cos-website.ap-chengdu.myqcloud.com/prototype-series.png)
 
 <!-- more -->
 #### apply 与 call 的区别
