js 原型链继承实现方式

--- a/source/_posts/面试遇到的.md
+++ b/source/_posts/面试遇到的.md
@@ -20,10 +20,73 @@ categories: 前端
 你用了哪些 `es6` 的东西，都是啥，其中 **箭头函数** 与普通函数的区别最常被问
 
 #### 原型链相关：如何实现原型链继承，原型与构造函数的关系，`new` 对象的时候发生的过程
-下面这张图可以清晰明白的帮助我们理解，如果还想深入理解，参考 [这儿](https://github.com/mqyqingfeng/Blog/issues/2)
+下面这张图可以清晰明白的帮助我们理解，如果还想深入理解，参考 [这儿1](https://github.com/mqyqingfeng/Blog/issues/2) 和 [这儿2](https://www.digitalocean.com/community/tutorials/understanding-classes-in-javascript)
 ![原型链](https://tang-blog-1257996120.cos-website.ap-chengdu.myqcloud.com/prototype-series.png)
-
 <!-- more -->
+下面附上 `es5` 和 `es6` 实现继承的方式：  
+`es5`:
+``` js 
+function Hero(name, level) {
+    this.name = name;
+    this.level = level;
+}
+
+// Adding a method to the constructor
+Hero.prototype.greet = function() {
+    return `${this.name} says hello.`;
+}
+
+// Creating a new constructor from the parent
+function Mage(name, level, spell) {
+    // Chain constructor with call
+    Hero.call(this, name, level);
+
+    this.spell = spell;
+}
+const hero1 = new Mage('Lejon', 2, 'Magic Missile');
+console.log(hero1)
+```
+`es6`:
+``` js
+// Initializing a class
+class Hero {
+    constructor(name, level) {
+        this.name = name;
+        this.level = level;
+    }
+
+    // Adding a method to the constructor
+    greet() {
+        return `${this.name} says hello.`;
+    }
+}
+
+// Creating a new class from the parent
+class Mage extends Hero {
+    constructor(name, level, spell) {
+        // Chain constructor with super
+        super(name, level);
+
+        // Add a new property
+        this.spell = spell;
+    }
+}
+const hero2 = new Mage('Lejon', 2, 'Magic Missile');
+console.log(hero2)
+```
+*结果*： 
+``` js
+// hero1
+Mage {name: "Lejon", level: 2, spell: "Magic Missile"}
+__proto__:
+    ▶ constructor: ƒ Mage(name, level, spell)
+```
+``` js    
+// hero2
+Mage {name: "Lejon", level: 2, spell: "Magic Missile"}
+__proto__: Hero
+    ▶ constructor: class Mage
+```
 #### apply 与 call 的区别
 都是为了改变调用函数的上下文，唯一的区别就是传参格式的区别，`call` 接受多个参数， `apply` 接受数组参数，如下：
 ``` js
