--- a/source/_posts/计算机知识.md
+++ b/source/_posts/计算机知识.md
@@ -27,6 +27,7 @@ categories: 杂说
 
 ### 压缩
 图片颜色用 红绿蓝 三种颜色合成表示，每个颜色都是 1 个字节， 所以一个 16px 的图片 占用的内存是 16 * 3 = 48 字节。我们可以用以下方法实现减少内存。
+<!-- more -->
 
 #### 无损压缩
 -  游程编码（Run-Length Encoding），常用于出现很多重复值的文件。比如一个图片颜色是 "黄黄黄绿绿绿..." 这种格式，可以改为 "3黄3绿..." 这种格式的代码，保持格式一致。就减少了很少内存。这是 **无损压缩**
@@ -38,20 +39,20 @@ categories: 杂说
         - 最后的整个树就叫做 "霍夫曼树"
     - 实例 ：
         - 一个文件分为： YY(黄黄)、WY（白黄）、BY（黑黄）、BB（黑黑）
-        - 按 "霍夫曼树" 排列为 ![houfuman_tree]()
-    - 将每个块翻译为代码，且由于在树中的位置不同，这些代码是不会重复的，结果最后为：![houfuman_code]()。48 字节的图片转换为了 14 位 的 10110000111100 , 在前面加上字典，就完成了整个压缩，结果是 30 字节。
+        - 按 "霍夫曼树" 排列为 ![houfuman_tree](https://tang-blog-1257996120.cos.ap-chengdu.myqcloud.com/crash%20course/huofuman_tree.jpg)
+    - 将每个块翻译为代码，且由于在树中的位置不同，这些代码是不会重复的，结果最后为：![houfuman_code](https://tang-blog-1257996120.cos.ap-chengdu.myqcloud.com/crash%20course/houfuman_code.png)。48 字节的图片转换为了 14 位 的 10110000111100 , 在前面加上字典，就完成了整个压缩，结果是 30 字节。
 
 几乎所有的无损压缩格式都由上面两个方法组合起来使用，比如： `GIF , PNG , PDF , ZIP`
 
 #### 有损压缩
 丢掉人类无法识别的数据，这种删除人类无法感知的数据的方法叫做 "感知编码" ，比如： 
 - 声音有损压缩，去除超声波，以主要精度表示人声，次要精度表示低声波。如 skype 打电话，网速慢的时候压缩会去除更多数据，所以 skype 打电话像机器人。没有压缩的音频格式有 `WAV 、 FLAC` ， 压缩的有 `MP3` 等，占用内存小了 10 倍
-- 图片有损压缩， 如 "JGEG" ， 删除人类无法感知的。
-- 视频压缩：视频本质是一长串图片，但是视频每一帧之间的差别是很小的。很多视频格式只存帧之间变化的部分。`NPEG-4` 是常见标准，可以比原图片小 20 - 200 倍。
+- 图片有损压缩， 如 `JGEG` ， 删除人类无法感知的。
+- 视频压缩：视频本质是一长串图片，但是视频每一帧之间的差别是很小的。很多视频格式**只存帧之间变化的部分**。`NPEG-4` 是常见标准，可以比原图片小 20 - 200 倍。
 
 ### 屏幕显示
 
-- 阴极射线管 （CRT）:把电子发射到 有磷光体涂层的屏幕了，当电子撞击涂层时，会发光几分之一秒。电子可以用磁场控制。所以可以用两种方法绘制
+- 阴极射线管 （`CRT`）:把电子发射到 有磷光体涂层的屏幕了，当电子撞击涂层时，会发光几分之一秒。电子可以用磁场控制。所以可以用两种方法绘制
     - 引到电子束描绘出形状，叫做 "尺量扫描"
     - 按固定路径，一行行扫描，从上到下，从左往右，不断重复。只在特定的点打开电子束，叫做 "光栅扫描"
 - 位图显示，内存中的位对应屏幕上的像素。
@@ -61,21 +62,19 @@ categories: 杂说
 把 3D 坐标拍平到 2D屏幕上，叫 **线框渲染**， 常用方法有：
 
 - 正交投影： 立方体的各个边，在投影中互相平行
-- 透视投射： 在真实的 3D 世界中，平行线段会在远处收敛于一点
+- 透视投射： 在真实的 3D 世界中，平行线段会在远处收敛于一点。如图：![透视投射](https://tang-blog-1257996120.cos.ap-chengdu.myqcloud.com/crash%20course/toushi_toushe.png)
 
 #### 填充图形
-3D图形除了线框渲染，还需要填充
+**3D** 图形除了线框渲染，还需要填充
 
-简单的 3D 图形可以用举行用作最小组成单元。对于复杂的 3D 投射，一般使用三角形用作最小组成单元。因为 3 个点可以确定唯一的一个面。
+简单的 **3D** 图形可以用矩形用作最小组成单元。对于复杂的 **3D** 投射，一般使用三角形用作最小组成单元。因为 3 个点可以确定唯一的一个面。
 
 下面是几种填充算法：
 
 - 扫描线算法
-    1. 先读三角形的3个点， 找最大和最小的 Y 值，只在这两点间工作。如图
+    1. 先读三角形的3个点， 找最大和最小的 Y 值，只在这两点间工作。如图 ![初始图形](https://tang-blog-1257996120.cos.ap-chengdu.myqcloud.com/crash%20course/scan_origin.png)
     2. 然后从上往下，每次一行，计算每一行与三角形相交的2个点。因为是三角形，如果相交一条边，必然相交另一条边
-    3. 一直到扫到底部完成，结果如图 ![扫描线结果]()
-
-    缺点： 边缘锯齿
+    3. 一直到扫到底部完成，结果如图 ![扫描线结果](https://tang-blog-1257996120.cos.ap-chengdu.myqcloud.com/crash%20course/scan_finish.png)
 
 
 **算法缺点：**
@@ -87,12 +86,12 @@ categories: 杂说
 - 减轻锯齿：
     - 抗锯齿： 字体和图标常用。通过判断三角形切过像素的程度，来调整颜色，具体做法如下：
         - 如果像素在三角形内部，就直接涂颜色
-        - 如果三角形划过像素，颜色就浅一些，达到一种边缘羽化的效果，结果如图： 
+        - 如果三角形划过像素，颜色就浅一些，达到一种边缘羽化的效果，结果如图： ![scan_yuhua](https://tang-blog-1257996120.cos.ap-chengdu.myqcloud.com/crash%20course/scan_yuhua.png)
 
 #### 实际渲染过程
 由于图形重叠形成遮挡，所以渲染过程有这么几种：
 
-- 画家算法渲染： 用排序算法将远处的先渲染，然后根据距离再渲染近的。因为画家也是先画背景，再画近的，所以叫 画家算法 。
-- 深度缓冲(Z-buffering)渲染：不用排序，所以比前面的算法快。具体步骤：
+- **画家算法渲染：** 用排序算法将远处的先渲染，然后根据距离再渲染近的。因为画家也是先画背景，再画近的，所以叫 **画家算法** 。
+- **深度缓冲(Z-buffering)渲染：**不用排序，所以比前面的算法快。具体步骤：
     - 算法会记录每个像素距离屏幕的位置，在内存中存有一个数字矩阵，每个元素总是记录距离屏幕的最小值。
-    - 矩阵中每个元素的初始值是无限大，然后类似于扫描线算法进行扫描三角形，总是记录更低的值。假如A三角形距离屏幕为20，由于 20 < “无限大” ，所以记录为20。依次记录完所有的三角形，由于记录的总是最小值，所以跟渲染三角形的顺序没有关系
+    - 矩阵中每个元素的初始值是无限大，然后类似于扫描线算法进行扫描三角形，总是记录更低的值。假如A三角形距离屏幕为20，由于 20 < “无限大” ，所以记录为20。依次记录完所有的三角形，由于记录的总是最小值，所以跟渲染三角形的顺序没有关系。 如图： ![z-buffering](https://tang-blog-1257996120.cos.ap-chengdu.myqcloud.com/crash%20course/z_buffering.png)
