修改文章tag与categories

--- a/source/_posts/不同浏览器通用的事件处理.md
+++ b/source/_posts/不同浏览器通用的事件处理.md
@@ -2,7 +2,7 @@ title: 不同浏览器通用的事件处理
 date: 2016-10-08 14:04:34
 tags: 
 - javascript
-categories: Javascript
+categories: 前端
 ---
 >摘抄自：[马云云_理想青年](https://github.com/markyun/Markyun.js/blob/master/markyunjs/WebContent/js/markyun.js)
 
