--- a/source/_posts/兔子问题-斐波那契数列.md
+++ b/source/_posts/兔子问题-斐波那契数列.md
@@ -1,6 +1,7 @@
 title: 兔子问题(斐波那契数列)
 date: 2016-04-21 14:31:21
-tags: 算法
+tags: 
+- 算法
 categories: 算法
 ---
 **有这样一个题目:**已知一对兔子每一个月可以生一对小兔子，而一对兔子出生后第三个月开始生小兔子假如一年内没有发生死亡，则一对兔子一年内能繁殖成多少对？
