--- a/source/_posts/小棋童.md
+++ b/source/_posts/小棋童.md
@@ -1,8 +1,8 @@
 title: 小棋童
 date: 2016-12-02 11:59:35
 tags: 
-- music
-categories: music
+- 闲语
+categories: 闲语
 ---
 ![小棋童](https://tang-blog-1257996120.cos-website.ap-chengdu.myqcloud.com/xiaoqitong.jpg)
 
