--- a/source/_posts/戏言.md
+++ b/source/_posts/戏言.md
@@ -1,8 +1,8 @@
 title: 戏言
 date: 2016-12-01 17:50:26
 tags: 
-- music
-categories: music
+- 闲语
+categories: 闲语
 ---
 ![戏言](https://tang-blog-1257996120.cos-website.ap-chengdu.myqcloud.com/xiyan.jpg)
 
