--- a/source/_posts/浏览器中常用的存储.md
+++ b/source/_posts/浏览器中常用的存储.md
@@ -2,7 +2,7 @@ title: 浏览器中常用的存储
 date: 2016-10-08 11:19:01
 tags: 
 - HTML5
-categories: HTML5
+categories: 前端
 ---
 > 本文参考:
 - [邹润阳](http://jerryzou.com/posts/cookie-and-web-storage/)  
