--- a/source/_posts/计算机知识.md
+++ b/source/_posts/计算机知识.md
@@ -1,7 +1,7 @@
 title: 计算机知识
 date: 2019-04-10 22:35:44
 tags:
-- 杂说
+- 计算机知识
 categories: 杂说
 ---
 
@@ -47,7 +47,7 @@ categories: 杂说
 #### 有损压缩
 丢掉人类无法识别的数据，这种删除人类无法感知的数据的方法叫做 "感知编码" ，比如： 
 - 声音有损压缩，去除超声波，以主要精度表示人声，次要精度表示低声波。如 skype 打电话，网速慢的时候压缩会去除更多数据，所以 skype 打电话像机器人。没有压缩的音频格式有 `WAV 、 FLAC` ， 压缩的有 `MP3` 等，占用内存小了 10 倍
-- 图片有损压缩， 如 `JGEG` ， 删除人类无法感知的。
+- 图片有损压缩， 如 `JPEG` ， 删除人类无法感知的。
 - 视频压缩：视频本质是一长串图片，但是视频每一帧之间的差别是很小的。很多视频格式**只存帧之间变化的部分**。`NPEG-4` 是常见标准，可以比原图片小 20 - 200 倍。
 
 ### 屏幕显示
