--- a/source/_posts/谷歌云部署个人网站.md
+++ b/source/_posts/谷歌云部署个人网站.md
@@ -2,8 +2,8 @@ title: 谷歌云部署个人网站
 date: 2018-01-24 17:09:26
 tags: 
 - linux
-- 云
-categories: linux
+- 谷歌云
+categories: 杂说
 ---
 >得知谷歌云免费的消息，喜出望外，毕竟阿里云腾讯云这些一年价格也不菲。赶紧申请了一个，想申请的抓紧了。废话不说了，跟我一起在谷歌云上部署一个个人网站吧。
 
