--- a/source/_posts/面试遇到的.md
+++ b/source/_posts/面试遇到的.md
@@ -2,7 +2,7 @@ title: 面试遇到的
 date: 2018-05-29 20:34:58
 tags: 
 - 面试
-categories: 前端
+categories: 杂说
 ---
 > 一有离意便按耐不住自己，面试了一周半便确定了自己即将去的地方，不知道是不是太快了点...前后林林总总面了10家过一点，有5家给了我offer，有些问题没回答上来但还是通过了，还有些就没通过，再次根据回忆主要记录下, 问的太多了，所以下面的问题都是印象比较深刻的，印象深刻嘛，要嘛是不会的，要嘛是问了次数比较多的。对了，我是一个前端，主要的问题也都是针对前端，因为一直在做 `vue` 项目，所以很多问题也都跟 `vue` 相关
 
@@ -166,9 +166,16 @@ function distinct(arr) {
 #### 请列举下js的数据类型
 一共7种，`es6`中新增加了一个数据类型 `Symbol`。其中 **引用类型** 只有一种，就是 `Object`，`Array` 与 `Function` 都不算，具体请看 [这儿](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Guide/Grammar_and_types)
 
-#### 移动端点击事件 200ms 延迟处理
-我回答的是可以用 `tap` 代替 `click`，面试官又问为啥，我说 `angular` 还是 `ionic` 里有这么个方法，官方推荐使用这个...这明显不是面试官想要的答案  
-有个小同事给了这个 `css` 属性: `touch-action: manipulation;` 禁用双击可缩放功能可减少浏览器在用户点击屏幕时延迟生成点击事件的需要,具体可以查看 [这儿](https://developer.mozilla.org/zh-CN/docs/Web/CSS/touch-action)
+#### 移动端点击事件 300ms 延迟处理
+我回答的是可以用 `tap` 代替 `click`，我只记得 `angular` 还是 `ionic` 里有这么个方法，官方推荐使用这个...这明显不是面试官想要的答案  
+后面查了一下：  
+*原因：* 等待 `300ms` 看用户是点击还是双击缩放  
+*解决办法：* 
+
+- 禁止缩放 `<meta name="viewport" content="user-scalable=no">` ，这样的话双指缩放也被禁了，不推荐
+- 设置默认视口宽度为设备宽度: `<meta name="viewport" content="width=device-width, initial-scale=1">` ，加了这个之后浏览器认为该网站已经对移动端做过了适配和优化，就无需双击缩放操作了
+- 设置 `css` : `touch-action:none;` 或 `touch-action:manipulation;` ，属性说明看 [这儿](https://developer.mozilla.org/zh-CN/docs/Web/CSS/touch-action)
+- [fastclick.js](https://github.com/ftlabs/fastclick)
 
 #### 移动端 1px 边框问题
 同样是看过的东西，又忘了... 可以参考 [这儿](https://segmentfault.com/a/1190000011466832)
