更新git常用命令

--- a/source/_posts/计算机知识.md
+++ b/source/_posts/计算机知识.md
@@ -95,3 +95,31 @@ categories: 杂说
 - **深度缓冲(Z-buffering)渲染：**不用排序，所以比前面的算法快。具体步骤：
     - 算法会记录每个像素距离屏幕的位置，在内存中存有一个数字矩阵，每个元素总是记录距离屏幕的最小值。
     - 矩阵中每个元素的初始值是无限大，然后类似于扫描线算法进行扫描三角形，总是记录更低的值。假如A三角形距离屏幕为20，由于 20 < “无限大” ，所以记录为20。依次记录完所有的三角形，由于记录的总是最小值，所以跟渲染三角形的顺序没有关系。 如图： ![z-buffering](https://tang-blog-1257996120.cos.ap-chengdu.myqcloud.com/crash%20course/z_buffering.png)
+
+### 计算机网络
+
+#### 基础概念与过程
+- 指数退避：一个局域网中的不同计算机使用同一载体传输数据时，相互堵塞，各个计算机会等待随机时间后重新发送，如果还堵塞，等待时间指数增长，再次发送，直到网络从新疏通。
+- 交换机： 为了使得同一载体中的计算机少一点，用交换机将同一个局域网分割成两个更小的局域网。互联网就是这样组成的。
+- 路由： 从一台计算机到另外一台计算机路径一般要好几条，从途中也会经过很多点，可以根据实际情况（比如有条不能用了）选择不同的路由到达目的地，使得通信更可靠，更能容错。一些机构，如军队会购买专有网络连接到数据中心。
+    - 跳数：消息沿着路由跳转的次数，跳数会记录在消息中，如果哪条消息跳数很高，就说明路由出现了错误。可以用 traceroute 查看跳转的次数
+- 数据包： 从一台计算机发送信息到另外一台计算机的数据我们称之为报文，但报文可能会很大，所以一个报文没传递完时会占用其中一条路，导致后面的报文阻塞。解决方法是将报文拆分为很小的数据包传递
+
+#### 一些协议
+- `IP` (internet protocol): 网络上定位计算机，将数据发给指定的计算机。定义了报文的格式。
+- `UDP` : 计算机接收到数据后，通过端口号发给应用程序。典型特征：“端口号”、“校验和”。数据丢失没有修复措施
+- `TCP` : 优化后的 `UDP` ，也具有 "端口号"、“校验和” ， 同时还具有 “数据包有序性”、“数据包接受后发送确认码” ... so, `TCP` 可以处理乱序和丢失数据包，没有接收到确认码就重发，并根据网络情况调整同时发送数据包的个数，即传输 速率
+
+#### 其他
+- `DNS` (domain name system) :值得一提的是，它存储的是树状结构
+- `OSI` 七层协议：
+    - 物理层： 线路里的电信号、无线网络里的无线信号
+    - 数据链路层： 负责操控 “物理层” 。 有： MAC 地址、碰撞检测、指数退避（如：一个局域网中的不同计算机使用同一载体传输数据时，相互堵塞，各个计算机会等待随机时间后重新发送，如果还堵塞，等待时间指数增长，再次发送，直到网络从新疏通。）
+    - 网络层： 负责报文交换和路由
+    - 传输层： UDP/TCP
+    - 会话层: 用 UDP/TCP 创建连接，传递信息，然后关闭连接，这个过程就是会话。 查询 DNS 或看网页时 就会发生这一套流程。
+    - 表示层：
+    - 应用层：
+- 反向链接：连接到该网页的链接。用来判断网页质量，如果反向链接多，说明质量高。搜索引擎刚出现时有人通过在网页里添加各种关键字（但无实际内容）来欺骗搜索引擎，后面 google 优化算法，通过反向链接来推荐网页
+
+### 计算机安全
