--- a/source/_posts/面试遇到的.md
+++ b/source/_posts/面试遇到的.md
@@ -178,7 +178,97 @@ function distinct(arr) {
 - [fastclick.js](https://github.com/ftlabs/fastclick)
 
 #### 移动端 1px 边框问题
-同样是看过的东西，又忘了... 可以参考 [这儿](https://segmentfault.com/a/1190000011466832)
+多种方案：[1px border 的6种方法](http://www.programmersought.com/article/2597819400/)
+
+最佳方案： 利用伪类
+
+**1. 定义border时使用下面的类：**
+``` scss
+.bd {
+    border-style: solid;
+    border-color: #ccc;
+    &.bd-l {
+        border-left-width: 1px;
+    }
+    &.bd-r {
+        border-right-width: 1px;
+    }
+    &.bd-t {
+        border-top-width: 1px;
+    }
+    &.bd-b {
+        border-bottom-width: 1px;
+    }
+    &.bd-all {
+        border-width: 1px;
+    }
+}
+```
+**2. 利用js添加缩放类 scale-bd**
+``` js
+if(window.devicePixelRatio && devicePixelRatio >= 2){
+  document.documentElement.className = `scale-bd scale-${window.devicePixelRatio}`;
+}
+```
+**3. 定义高清屏下的border：**
+``` scss
+.scale-bd {
+    .bd {
+        position: relative;
+        border: none !important;
+        &::before {
+            content: '';
+            position: absolute;
+            border-color: #ccc;
+            border-style: solid;
+            transform-origin: 0 0;
+        }
+        &.bd-l::before {
+            left: 0;
+            top: 0;
+            border-left-width: 1px;
+        }
+        &.bd-r::before {
+            right: 0;
+            top: 0;
+            border-right-width: 1px;
+        }
+        &.bd-t::before {
+            left: 0;
+            top: 0;
+            border-top-width: 1px;
+        }
+        &.bd-b::before {
+            left: 0;
+            bottom: 0;
+            border-bottom-width: 1px;
+        }
+        &.bd-all::before {
+            border-width: 1px;
+        }
+    }
+}
+// 对于 devicePixelRatio 为 2 的屏幕
+.scale-2 {
+    .bd {
+        &::before {
+            width: 200%;
+            height: 200%;
+            transform: scale(0.5);
+        }
+    }
+}
+// 对于 devicePixelRatio 为 2 的屏幕
+.scale-3 {
+    .bd {
+        &::before {
+            width: 300%;
+            height: 300%;
+            transform: scale(0.33);
+        }
+    }
+}
+```
 
 #### sql相关
 有面试官问了些简单的 `sql` ，因为我说我不熟，所以问的都很简单，而且我面的是前端岗...涉及太多请自行谷歌
